<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="#BA7C50"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sevarock.coffeepedia.ListOfDrinks">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="List Of Coffee Beverages"
        android:textSize="28dp"
        android:textAlignment="center"
        android:id="@+id/ListHeader"
        android:textStyle="bold"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:textColor="#111111"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ListHeader">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/capuccino"
                android:background="@drawable/coffeebutton"
                android:textStyle="italic"
                android:text="Capuccino"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:layout_marginBottom="8dp"/>

            <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/americano"
                android:background="@drawable/coffeebutton"
            android:textStyle="italic"
            android:textColor="#ffffff"
            android:textAllCaps="false"
            android:text="Americano"
                android:layout_marginBottom="8dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Espresso"
                android:background="@drawable/coffeebutton"
                android:textStyle="italic"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:text="Espresso"
                android:layout_marginBottom="8dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Latte"
                android:background="@drawable/coffeebutton"
                android:textStyle="italic"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:text="Latte"
                android:layout_marginBottom="8dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Gullermo"
                android:background="@drawable/coffeebutton"
                android:textStyle="italic"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:text="Gullermo"
                android:layout_marginBottom="8dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Ristretto"
                android:background="@drawable/coffeebutton"
                android:textStyle="italic"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:text="Ristretto"
                android:layout_marginBottom="8dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Cubano"
                android:background="@drawable/coffeebutton"
                android:textStyle="italic"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:text="Cubano"
                android:layout_marginBottom="8dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Crema"
                android:background="@drawable/coffeebutton"
                android:textStyle="italic"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:text="Crema"
                android:layout_marginBottom="8dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Zorro"
                android:background="@drawable/coffeebutton"
                android:textStyle="italic"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:text="Zorro"
                android:layout_marginBottom="8dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Doppio"
                android:background="@drawable/coffeebutton"
                android:textStyle="italic"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:text="Doppio"
                android:layout_marginBottom="8dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Romano"
                android:background="@drawable/coffeebutton"
                android:textStyle="italic"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:text="Espresso Romano"
                android:layout_marginBottom="8dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Antoccino"
                android:background="@drawable/coffeebutton"
                android:textStyle="italic"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:text="Antoccino"
                android:layout_marginBottom="8dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Breve"
                android:background="@drawable/coffeebutton"
                android:textStyle="italic"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:text="Breve"
                android:layout_marginBottom="8dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Bombon"
                android:background="@drawable/coffeebutton"
                android:textStyle="italic"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:text="Cafe Bombon"
                android:layout_marginBottom="8dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Cortado"
                android:background="@drawable/coffeebutton"
                android:textStyle="italic"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:text="Cortado"
                android:layout_marginBottom="8dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LatteMacchiato"
                android:background="@drawable/coffeebutton"
                android:textStyle="italic"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:text="Latte Macchiato"
                android:layout_marginBottom="8dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Espressino"
                android:background="@drawable/coffeebutton"
                android:textStyle="italic"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:text="Espressino"
                android:layout_marginBottom="8dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/FlatWhite"
                android:background="@drawable/coffeebutton"
                android:textStyle="italic"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:text="Flat White"
                android:layout_marginBottom="8dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Galao"
                android:background="@drawable/coffeebutton"
                android:textStyle="italic"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:text="Galao"
                android:layout_marginBottom="8dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Macchiato"
                android:background="@drawable/coffeebutton"
                android:textStyle="italic"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:text="Macchiato"
                android:layout_marginBottom="8dp"/>






        </LinearLayout>


    </ScrollView>




</RelativeLayout>
