<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BA7C50"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sevarock.coffeepedia.CoffeeBeverageArticle">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#111111"
        android:textSize="28dp"
        android:textAlignment="center"
        android:id="@+id/ArticleHeaderText"
        android:layout_marginBottom="8dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/ArticleHeaderText"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="35dp"
            android:scaleType="fitCenter"
            android:id="@+id/ArticleHeaderImage"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/frame"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ArticleHeaderImage">
        <WebView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textAlignment="inherit"
            android:layout_gravity="fill"
            android:id="@+id/ArticleBody"/>
    </ScrollView>

</RelativeLayout>
