<resources>
    <string name="app_name">CoffeePedia</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_cappucino">cappucinoActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>

    <string name="title_activity_coffee_maps">Map</string>
    <string name="title_activity_web_view">WebView</string>
</resources>
